@@ -105,48 +105,7 @@ namespace AriaMaestosa
                 if (duration > last_tick) last_tick = duration;
             }
             
-            std::vector<int> tempos;
-            std::vector<int> duration;
-            
-            const int tempo_events_amount = seq->getTempoEventAmount();
-            //std::cout << "tempo_events_amount = " << tempo_events_amount << std::endl;
-            if (tempo_events_amount < 1 or (tempo_events_amount == 1 and seq->getTempoEvent(0)->getTick() == 0) )
-            {
-                tempos.push_back(seq->getTempo());
-                duration.push_back(last_tick);
-            }
-            else
-            {
-                // multiple tempo changes
-                
-                // from beginning to first event
-                tempos.push_back(seq->getTempo());
-                duration.push_back(seq->getTempoEvent(0)->getTick());
-                
-                //std::cout << "Firstly, " << (seq->tempoEvents[0].getTick()) << " ticks at " << seq->getTempo() << std::endl;
-                
-                // other events
-                for (int n=1; n<tempo_events_amount; n++)
-                {
-                    tempos.push_back( convertTempoBendToBPM(seq->getTempoEvent(n-1)->getValue()) );
-                    duration.push_back(seq->getTempoEvent(n)->getTick() - seq->getTempoEvent(n-1)->getTick());
-                    //std::cout << (duration[duration.size()-1]) << " ticks at " << (tempos[tempos.size()-1]) << std::endl;
-                }
-                
-                // after last event
-                tempos.push_back( convertTempoBendToBPM(seq->getTempoEvent(tempo_events_amount-1)->getValue()) );
-                duration.push_back( last_tick - seq->getTempoEvent(tempo_events_amount-1)->getTick() );
-                //std::cout << "Finally, " << (duration[duration.size()-1]) << " ticks at " << (tempos[tempos.size()-1]) << std::endl;
-            }
-            
-            
-            int song_duration = 0;
-            const int amount = tempos.size();
-            for (int n=0; n<amount; n++)
-            {
-                // std::cout << " -- adding " << (int)round( ((float)duration[n] * 60.0f ) / ((float)seq->ticksPerBeat() * (float)tempos[n])) << std::endl;
-                song_duration += (int)round( ((float)duration[n] * 60.0f ) / ((float)seq->ticksPerBeat() * (float)tempos[n]));
-            }
+            int song_duration = getTimeAtTick(last_tick, seq);
             
             wxString duration_label = wxString::Format(wxString(_("Song duration :")) + wxT("  %i:%.2i"), (int)(song_duration/60), song_duration%60);
             //std::cout << song_duration << " --> " << duration_label.mb_str() << std::endl;
