@@ -10,6 +10,7 @@
 - Improved the pause feature to not affect the song start measure
 - Other bug fixes and minor improvements
 - Show which sequences have unsaved changes
+- Display a timer during playback
 
 1.3 beta 1
 - Intensive code refactoring and cleanup
